# amos2026ss04-taskorbit-conversational-agent

./: .gitignore  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: feature_request.md
Deliverables/sprint-01/: feature-board.tsv  planning-documents.xlsx
Deliverables/sprint-02/: feature-board.tsv  planning-documents.xlsx
Documentation/: Taskorbit Conversational Agent System Architecture.docx
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0e73a10463b9_initial_schema.py
backend/src/: app.js
backend/src/routes/: agent.js
backend/src/taskorbit/: __init__.py  cli.py  config.py  types.py
backend/src/taskorbit/agents/: __init__.py  sales.py  technical_support.py
backend/src/taskorbit/api/: __init__.py  health.py  main.py
backend/src/taskorbit/api/routes/: conversations.py  livekit.py
backend/src/taskorbit/database/: __init__.py  models.py
backend/src/taskorbit/integrations/: __init__.py
backend/src/taskorbit/language/: __init__.py
backend/src/taskorbit/livekit_agent/: __init__.py
backend/src/taskorbit/logging/: __init__.py  setup.py
backend/src/taskorbit/orchestration/: __init__.py
backend/src/taskorbit/tools/: __init__.py  agent_transfer.py  data_extraction.py  end_call.py
backend/tests/: test_conversations_route.py  test_health.py  test_livekit_route.py  test_orchestration.py  test_types.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/components/: ConversationalChat.tsx  Empty.tsx  Layout.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/components/agent-config/: AdvancedSection.tsx  ConfirmationsSection.tsx  IdentitySection.tsx  InstructionsSection.tsx  PipelineSection.tsx  ToolsSection.tsx  VariablesSection.tsx
frontend/src/components/chat/: AgentIdentityCard.tsx  CallControls.tsx  CallStatusIndicator.tsx  ConfirmationPrompt.tsx  PreCallDiagnostics.tsx
frontend/src/components/history/: ConversationListItem.tsx  TranscriptBubble.tsx  TranscriptToolMarker.tsx
frontend/src/hooks/: useBackendHealth.ts
frontend/src/lib/: conversationApi.ts  livekitToken.ts  mockAgents.ts  mockConversations.ts  utils.ts
frontend/src/pages/: AgentConfigPage.tsx  HistoryPage.tsx
frontend/src/types/: agentConfig.ts  callState.ts
schemas/: README.md  agent-task.schema.json
schemas/examples/: agent-task.example.json
